--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 joblib==1.3.2
 MarkupSafe==2.1.5
 numpy==1.26.4
+packaging==23.2
 pandas==2.2.0
 python-dateutil==2.8.2
 pytz==2024.1
@@ -16,4 +18,3 @@ six==1.16.0
 threadpoolctl==3.3.0
 tzdata==2024.1
 Werkzeug==3.0.1
-
