--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ packaging==23.2
 pandas==2.2.0
 python-dateutil==2.8.2
 pytz==2024.1
-scikit-learn==1.2.2
+scikit-learn==1.2.2.post1
 scipy==1.12.0
 six==1.16.0
 threadpoolctl==3.3.0
