--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,78 @@
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.2
-Flask-Cors==4.0.0
-gunicorn==21.2.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-MarkupSafe==2.1.5
+python-lsp-jsonrpc==1.0.0
+conda-build==3.22.0
+conda-repo-cli==1.0.20
+TBB==0.2
+PyYAML==6.0
 numpy==1.26.4
-packaging==23.2
-pandas==2.2.0
-python-dateutil==2.8.2
-pytz==2024.1
+imbalanced-learn==0.12.2
+pyasn1-modules==0.2.8
+comtypes==1.1.10
+atomicwrites==1.4.0
+patsy==0.5.2
+mkl-fft==1.3.1
+Jinja2==3.1.3
+Pillow==9.2.0
+PyDispatcher==2.0.5
 scikit-learn==1.2.2
+blinker==1.7.0
+gunicorn==21.2.0
+pytest==7.1.2
 scipy==1.12.0
+mypy-extensions==0.4.3
+pycurl==7.45.1
+mkl-service==2.4.0
 six==1.16.0
+anaconda-navigator==2.3.2
+backports.weakref==1.0.post1
+pandas==2.2.0
+zict==2.1.0bkcharts==0.2
+conda-verify==3.4.2
 threadpoolctl==3.3.0
+pep8==1.7.1
+brotlipy==0.7.0
+datashape==0.5.4
+appdirs==1.4.4
+Werkzeug==3.0.1fonttools==4.25.0
+python-dateutil==2.8.2
+control==0.9.3.post2
+MarkupSafe==2.1.5
+pyls-spyder==0.4.0
+mpmath==1.2.1
+webencodings==0.5.1
+llvmlite==0.38.0
+openpyxl==3.0.10
+queuelib==1.5.0
+click==8.1.7
+pywin32==302
+inflection==0.5.1
+scikit-learn-intelex==2021.20221004.171935
+win-unicode-console==0.5
+itsdangerous==2.1.2
+tables==3.6.1
+packaging==23.2
+scipy==1.9.1
+daal4py==2021.6.0
+pycosat==0.6.3
+cytoolz==0.11.0
+anaconda-client==1.11.0
+et-xmlfile==1.1.0
+statsmodels==0.13.2
+munkres==1.1.4
+navigator-updater==0.3.0
+Flask==3.0.2
+pipdeptree==2.17.0
+mysql-connector-python==8.3.0
+xgboost==2.0.3
+clyent==1.2.2
+packaging==24.0
+colorama==0.4.6
 tzdata==2024.1
-Werkzeug==3.0.1
+cssselect==1.1.0
+wincertstore==0.2
+mccabe==0.6.1
+sip==4.19.13
+conda==22.11.1
+constantly==15.1.0
+Flask-Cors==4.0.0
+joblib==1.3.2
+pytz==2024.1
